# LightshowAI

./: .gitignore  README.md  mlflow_tracker.py  pyproject.toml  xas_ui.py
.claude/commands/: xanes-analysis.md
aws/: RESOURCES.md
aws/chatbot/: .env.example  README.md  app.py  chainlit.md  chainlit_en-US.md  lightshowai-chatbot.service  lightshowai-plots.service  requirements.txt  setup.sh
aws/chatbot/.chainlit/: config.toml
aws/chatbot/.claude/commands/: xanes-analysis.md
aws/chatbot/public/: custom.css
aws/chatbot/public/elements/: iframe.jsx
html/: default.html  index.html
html/assets/css/: 1.css  10.css  2.css  3.css  4.css  5.css  6.css  7.css  8.css  9.css  bnl-2025.css
html/assets/jquery-sidr/: jquery.sidr.js
html/assets/jquery-ui/: index.html  jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
html/assets/jquery-ui/css/redmond/: jquery-ui.min.css
html/assets/jquery-ui/css/ui-lightness/: jquery-ui.min.css
html/assets/js/: bnl.js
lightshow/postprocess/: compare_utils.py  shakeup.py
lightshowai/: compare_utils.py  models.py  xas_ui.py
lightshowai/postprocess/: compare_utils.py  normalize.py
mcp/: lightshowai_server.py  materials_project_README.md  materials_project_client.py  materials_project_server.py  mlflow_server.py
